feat: add availableSince for a reusable availability check

--- a/docs/contributing/pages/components.mdx
+++ b/docs/contributing/pages/components.mdx
@@ -106,6 +106,33 @@ Attributes:
 
 - `src` (string) - the URL of the Arcade embed
 
+## AvailableSince
+
+Display version availability information in a consistent format. Use this component to indicate when a feature, API, or configuration option became available in an SDK.
+
+<AvailableSince version="10" />
+
+```markdown {tabTitle:Basic Usage}
+<AvailableSince version="10.17.0" />
+```
+
+Attributes:
+
+- `version` (string) - required, the version number (e.g., "10", "8.5.0")
+
+**When to use:**
+
+- Use `AvailableSince` to indicate when a feature or option first became available
+- For prominent minimum version requirements, use the [`VersionRequirement`](#versionrequirement) component instead
+
+**Examples in the wild:**
+
+The `AvailableSince` component is automatically used within:
+- `SdkOption` component for configuration options
+- `SdkApi` component for API methods
+
+You can also use it directly in MDX content to indicate availability for features or entire sections.
+
 ## Expandable
 
 Render an expandable section to provide additional information to users on demand.
