--- a/docs/platforms/javascript/common/opentelemetry/custom-setup.mdx
+++ b/docs/platforms/javascript/common/opentelemetry/custom-setup.mdx
@@ -100,7 +100,7 @@ If you want to add your own http/node-fetch instrumentation, you have to follow 
 
 ### Custom HTTP Instrumentation
 
-_Available since SDK version 8.35.0_
+<AvailableSince version="8.35.0" />
 
 You can add your own `@opentelemetry/instrumentation-http` instance in your OpenTelemetry setup. However, in this case, you need to disable span creation in Sentry's `httpIntegration`:
 
