--- a/docs/platforms/javascript/common/tracing/instrumentation/index.mdx
+++ b/docs/platforms/javascript/common/tracing/instrumentation/index.mdx
@@ -109,7 +109,7 @@ To add spans that aren't active, you can create independent spans. This is usefu
 
   ### Setting an inactive span active (browser only)
 
-  _Available Since: `10.15.0`_
+  <AvailableSince version="10.15.0" />
 
   In browser environments, you might run into use cases, where the callback-based span APIs are not sufficient.
   In such cases (see example below), you can use `startInactiveSpan` to start an initially inactive span and then
@@ -231,7 +231,7 @@ Sentry maintains a [list of well-known span operations](https://develop.sentry.d
 
 ### Updating the Span Name
 
-_Available since: v8.47.0_
+<AvailableSince version="8.47.0" />
 
 You can update the name of a span at any time:
 
