--- a/docs/platforms/javascript/guides/nestjs/features/sentry-cron-decorator.mdx
+++ b/docs/platforms/javascript/guides/nestjs/features/sentry-cron-decorator.mdx
@@ -3,9 +3,7 @@ title: SentryCron Decorator
 description: "Learn about Sentry's SentryCron decorator."
 ---
 
-<Alert>
-  The `@SentryCron` decorator is available from version `@sentry/nestjs` 8.16.0 and up.
-</Alert>
+<AvailableSince version="8.16.0" />
 
 The NestJS SDK includes a `@SentryCron` decorator that can be used to augment the native NestJS `@Cron` decorator to
 send check-ins to Sentry before and after each cron job run.
