--- a/docs/platforms/javascript/guides/nuxt/features/nitro-server-features.mdx
+++ b/docs/platforms/javascript/guides/nuxt/features/nitro-server-features.mdx
@@ -7,13 +7,13 @@ The Sentry Nuxt SDK automatically instruments various Nitro server APIs to provi
 
 ## Server Middleware
 
-<Alert>Available from version `@sentry/nuxt` 10.17.0 and up.</Alert>
+<AvailableSince version="10.17.0" />
 
 The Sentry Nuxt SDK automatically instruments [server middleware handlers](https://nuxt.com/docs/4.x/guide/directory-structure/server#server-middleware) in addition to server event handlers. This includes the handler functions and their `onBeforeResponse` and `onRequest` callbacks.
 
 ## Cache
 
-<Alert>Available from version `@sentry/nuxt` 10.21.0 and up.</Alert>
+<AvailableSince version="10.21.0" />
 
 The Sentry Nuxt SDK automatically instruments [cache APIs](https://nitro.build/guide/cache) for the following Nitro functions:
 
@@ -25,7 +25,7 @@ This provides spans in your transactions that represent cache operations and the
 
 ## Storage
 
-<Alert>Available from version `@sentry/nuxt` 10.21.0 and up.</Alert>
+<AvailableSince version="10.21.0" />
 
 The Sentry Nuxt SDK automatically instruments [storage APIs](https://nuxt.com/docs/4.x/guide/directory-structure/server#server-storage) (also known as KV storage) and common operations.
 
@@ -33,7 +33,7 @@ Keep in mind that only the storage mounts configured under `nitro.storage` in yo
 
 ## Database
 
-<Alert>Available from version `@sentry/nuxt` 10.21.0 and up.</Alert>
+<AvailableSince version="10.21.0" />
 
 The Sentry Nuxt SDK automatically instruments Nitro's [database API](https://nitro.build/guide/database). This provides spans in your transactions that represent database query operations and their durations, enabling you to identify slow queries, track query frequency, and optimize your database interactions.
 
