--- a/docs/platforms/kotlin/guides/kotlin-multiplatform/configuration/options.mdx
+++ b/docs/platforms/kotlin/guides/kotlin-multiplatform/configuration/options.mdx
@@ -34,7 +34,7 @@ If you are using Sentry in your mobile app, read our [frequently asked questions
 
 <Alert>
 
-This options is available since SDK version `0.13.0`
+<AvailableSince version="0.13.0" />
 
 </Alert>
 
