--- a/platform-includes/distributed-tracing/how-to-use/javascript.sveltekit.mdx
+++ b/platform-includes/distributed-tracing/how-to-use/javascript.sveltekit.mdx
@@ -73,7 +73,7 @@ If your app crashes while a user is uploading a photo, you can trace exactly whe
 
 ### Strict Trace Continuation
 
-_Available since SDK version 10_
+<AvailableSince version="10" />
 
 When your application receives requests, they might include `sentry-trace` and `baggage` headers from an upstream service that is also using Sentry.
 By default, the SDK will continue the trace from these incoming headers. However, this behavior can be undesirable if the requests are from a third-party service,
