Update sidenav for react native

--- a/docs/platforms/react-native/build-distribution/index.mdx
+++ b/docs/platforms/react-native/build-distribution/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Build Distribution
 sidebar_title: Build Distribution
-sidebar_order: 5250
+sidebar_order: 10
+sidebar_section: configuration
 description: Upload React Native iOS and Android builds to Sentry for distribution to internal teams and beta testers.
 ---
 
