--- a/docs/platforms/react-native/configuration/index.mdx
+++ b/docs/platforms/react-native/configuration/index.mdx
@@ -1,7 +1,9 @@
 ---
-title: Configuration
+title: Extended Configuration
+sidebar_title: Extended Configuration
 description: "Additional configuration options for the SDK."
-sidebar_order: 5
+sidebar_order: 2
+sidebar_section: configuration
 ---
 
 <PageGrid />
