--- a/docs/platforms/react-native/enriching-events/index.mdx
+++ b/docs/platforms/react-native/enriching-events/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Enriching Events
 description: Enrich events with additional context to make debugging simpler.
-sidebar_order: 2300
+sidebar_order: 1
+sidebar_section: configuration
 ---
 
 <PageGrid />
