--- a/docs/platforms/react-native/feature-flags/index.mdx
+++ b/docs/platforms/react-native/feature-flags/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Set Up Feature Flags
 sidebar_title: Feature Flags
-sidebar_order: 7000
+sidebar_order: 11
+sidebar_section: features
 description: Generic Feature Flags Integration.
 ---
 
