--- a/docs/platforms/react-native/integrations/index.mdx
+++ b/docs/platforms/react-native/integrations/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Integrations
 description: "Learn more about how integrations extend the functionality of our SDK and automatically cover common libraries and environments."
-sidebar_order: 30
+sidebar_order: 3
+sidebar_section: configuration
 ---
 
 <PageGrid />
