--- a/docs/platforms/react-native/metrics/index.mdx
+++ b/docs/platforms/react-native/metrics/index.mdx
@@ -2,7 +2,8 @@
 title: Set Up Metrics
 sidebar_title: Metrics
 description: "Metrics allow you to send, view and query counters, gauges and measurements from your Sentry-configured apps to track application health and drill down into related traces, logs, and errors."
-sidebar_order: 5760
+sidebar_order: 6
+sidebar_section: features
 beta: true
 ---
 
