--- a/docs/platforms/react-native/migration/index.mdx
+++ b/docs/platforms/react-native/migration/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Migration Guide
-sidebar_order: 8000
+sidebar_order: 11
+sidebar_section: configuration
 description: "Learn how to migrate to the new versions of Sentry's React Native SDK."
 ---
 
