--- a/docs/platforms/react-native/overhead/index.mdx
+++ b/docs/platforms/react-native/overhead/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: SDK Overhead
 description: "Learn about Sentry's React Native SDK overhead and how you can tailor your configuration to minimize it."
-sidebar_order: 7500
+sidebar_order: 9
+sidebar_section: configuration
 ---
 
 Adding new features or dependencies to your app incurs additional costs on resources - CPU time, memory usage, and network bandwidth, among other things. Sentry SDKs are no different. This document adds transparency to the possible overhead that using our SDK can add, and help you find the feature set and configurations that work best for you.
