--- a/docs/platforms/react-native/profiling/index.mdx
+++ b/docs/platforms/react-native/profiling/index.mdx
@@ -2,7 +2,8 @@
 title: Set Up Profiling
 sidebar_title: Profiling
 description: "Learn how to enable profiling in your app if it is not already set up."
-sidebar_order: 5000
+sidebar_order: 3
+sidebar_section: features
 ---
 
 <PlatformContent includePath="profiling/index/why-profiling" />
