--- a/docs/platforms/react-native/releases/index.mdx
+++ b/docs/platforms/react-native/releases/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Mobile SDK Releases
 description: "Learn about Sentry's release channels for Mobile SDK updates."
-sidebar_order: 7000
+sidebar_order: 8
+sidebar_section: configuration
 ---
 
 The React Native SDK uses the following channels to release SDK updates:
