--- a/docs/platforms/react-native/session-replay/index.mdx
+++ b/docs/platforms/react-native/session-replay/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Set Up Session Replay
 sidebar_title: Session Replay
-sidebar_order: 5500
+sidebar_order: 5
+sidebar_section: features
 notSupported:
 description: "Learn how to enable Session Replay in your mobile app."
 ---
