--- a/docs/platforms/react-native/size-analysis/index.mdx
+++ b/docs/platforms/react-native/size-analysis/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Size Analysis
 sidebar_title: Size Analysis
-sidebar_order: 5200
+sidebar_order: 12
+sidebar_section: features
 description: Upload React Native iOS and Android builds to Sentry for size analysis.
 ---
 
