--- a/docs/platforms/react-native/sourcemaps/index.mdx
+++ b/docs/platforms/react-native/sourcemaps/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Source Maps
 description: "Learn more about how to upload your source maps to Sentry."
-sidebar_order: 95
+sidebar_order: 5
+sidebar_section: configuration
 ---
 
 <Alert>
