--- a/docs/platforms/react-native/tracing/index.mdx
+++ b/docs/platforms/react-native/tracing/index.mdx
@@ -2,7 +2,8 @@
 title: Set Up Tracing
 sidebar_title: Tracing
 description: "Learn how to enable tracing in your app and discover valuable performance insights of your application."
-sidebar_order: 4000
+sidebar_order: 2
+sidebar_section: features
 ---
 
 With [tracing](/product/insights/overview/), Sentry tracks your software performance, measuring metrics like throughput and latency, and displaying the impact of errors across multiple systems. Sentry captures distributed traces consisting of transactions and spans, which measure individual services and individual operations within those services. Learn more about our model in [Distributed Tracing](/product/sentry-basics/tracing/distributed-tracing/).
