--- a/docs/platforms/react-native/troubleshooting/index.mdx
+++ b/docs/platforms/react-native/troubleshooting/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Troubleshooting
 description: "Troubleshoot and resolve common issues with the React Native SDK."
-sidebar_order: 9000
+sidebar_order: 12
+sidebar_section: configuration
 ---
 
 ## Support 16 KB Page Sizes on Android
