--- a/docs/platforms/react-native/usage/index.mdx
+++ b/docs/platforms/react-native/usage/index.mdx
@@ -1,7 +1,8 @@
 ---
-title: Usage
+title: Capturing Errors
 description: "Use the SDK to manually capture errors and other events."
-sidebar_order: 10
+sidebar_order: 1
+sidebar_section: features
 ---
 
 Sentry's SDK hooks into your runtime environment and automatically reports errors, uncaught exceptions, and unhandled rejections as well as other types of errors depending on the platform.
