--- a/docs/platforms/react-native/data-management/index.mdx
+++ b/docs/platforms/react-native/data-management/index.mdx
@@ -1,7 +1,8 @@
 ---
 title: Data Management
 description: Manage your events by pre-filtering, scrubbing sensitive information, and forwarding them to other systems.
-sidebar_order: 2500
+sidebar_order: 4
+sidebar_section: configuration
 ---
 
 <PageGrid />
