--- a/docs/platforms/react-native/features/index.mdx
+++ b/docs/platforms/react-native/features/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Features
 sidebar_order: 1
+sidebar_hidden: true
 description: "Learn about the features of Sentry's React Native SDK."
 ---
 
