--- a/docs/platforms/react-native/upload-debug/index.mdx
+++ b/docs/platforms/react-native/upload-debug/index.mdx
@@ -1,6 +1,7 @@
 ---
 title: Debug Symbols
-sidebar_order: 96
+sidebar_order: 7
+sidebar_section: configuration
 description: "Learn about using the Sentry Gradle Plugin or sentry-cli for providing debug symbols to Sentry."
 ---
 
