--- a/docs/platforms/react-native/user-feedback/index.mdx
+++ b/docs/platforms/react-native/user-feedback/index.mdx
@@ -2,7 +2,8 @@
 title: Set Up User Feedback
 sidebar_title: User Feedback
 description: Learn how to enable User Feedback in your app.
-sidebar_order: 6000
+sidebar_order: 10
+sidebar_section: features
 og_image: /og-images/platforms-react-native-user-feedback.png
 ---
 
